Added cities, scrolling clocks

--- a/conky.conf
+++ b/conky.conf
@@ -1,12 +1,12 @@
 -- conky.conf
 -- World Clocks drawn with Cairo and flags
 -- by @wim66
--- v 0.5 May 14, 2025
+-- -- v 0.6 May 15, 2025
 
 conky.config = {
     update_interval = 0.1,
     alignment = 'top_right',
-    gap_x = 250,
+    gap_x = 20,
     gap_y = 40,
     minimum_width = 460, minimum_height = 300,
     maximum_width = 460,
@@ -28,9 +28,8 @@ conky.config = {
     xftalpha = 1,
     default_color = 'FFFFFF',
     
-    lua_load = "settings.lua scripts/loadall.lua",
+    lua_load = "scripts/loadall.lua",
     lua_draw_hook_pre = 'main',
-    lua_startup_hook = 'vars',
 }
 
 conky.text = [[
