--- a/conky.conf
+++ b/conky.conf
@@ -1,7 +1,7 @@
 -- conky.conf
 -- World Clocks drawn with Cairo and flags
 -- by @wim66
--- -- v 0.6 May 15, 2025
+-- v 0.7 May 16, 2025
 
 conky.config = {
     update_interval = 0.1,
@@ -28,7 +28,7 @@ conky.config = {
     xftalpha = 1,
     default_color = 'FFFFFF',
     
-    lua_load = "scripts/loadall.lua",
+    lua_load = 'scripts/widget.lua',
     lua_draw_hook_pre = 'main',
 }
 
